# edgarpack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-site.yml
edgarpack/: __init__.py  cli.py  config.py
edgarpack/pack/: __init__.py  build.py  chunks.py  llms_txt.py  manifest.py
edgarpack/parse/: __init__.py  html_clean.py  ixbrl_strip.py  md_render.py  sectionize.py  semantic_html.py  tokenize.py
edgarpack/sec/: __init__.py  archives.py  cache.py  client.py  submissions.py  xbrl.py
edgarpack/site/: __init__.py  build.py  styles.py  templates.py
tests/: __init__.py  test_archives.py  test_html_clean.py  test_ixbrl_strip.py  test_md_render.py  test_pack_build.py  test_sectionize.py  test_site_build.py
